fixing cards clipping

--- a/frontend/src/components/screens/homescreen.css
+++ b/frontend/src/components/screens/homescreen.css
@@ -5,21 +5,10 @@
 .fondpage{
     background: rgba(255, 244, 164, 0.308);
     margin-bottom: -113px;
-    max-width:100%;
 
 
 }
 
-.container{
-    max-width: 110%;
-}
-
-.items-container {
-    display:inline-flex;
-}
-
-.vins-items {
-    display: inline;
-    overflow:auto;
-    max-width: none;
+.vins-items{
+    display: inline-flex;
 }
