--- a/frontend/src/components/screens/new screens/Vins-folder/vins-card.css
+++ b/frontend/src/components/screens/new screens/Vins-folder/vins-card.css
@@ -1,4 +1,4 @@
-.vinsbackground {
+/**.vinsbackground {
   margin-top: 116px;
   margin-bottom: 30px;
   width: 100%;
@@ -186,4 +186,4 @@
   .cards__item__text__vins {
     font-size: 13px;
   }
-}
+}**/
